# PatternRecognition

Lab1/: Отчёт по лабораторной работе.docx
Lab1/1/: CMakeLists.txt
Lab1/1/Logic/: ProbabilityCounter.cpp  ProbabilityCounter.h
Lab1/1/View/Windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Lab1/2/: CMakeLists.txt  main.cpp
Lab1/2/Logic/: Logic.cpp  Logic.h
Lab1/2/View/Windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Lab2/1/: .clang-format  CMakeLists.txt  main.cpp
Lab2/1/Handler/: Handler.cpp  Handler.h
Lab2/1/Logic/: Logic.cpp  Logic.h
Lab2/1/View/Widget/QCustomPlot/: qcustomplot.h
Lab2/1/View/Windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui
